# argos

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  design_improvements.md  pyproject.toml  pytest.ini
.cursor/commands/: release.md
.cursor/rules/: argos-global.mdc  backend-python.mdc  cursor-plugins.mdc  dev-workflow.mdc  frontend-react.mdc
.github/workflows/: ci.yml
ai/: README.md
ai/context/: api-endpoints.md  architecture.md  frontend.md  overview.md  stack.md  token-policy.md
ai/prompts/: bugfix.md  discovery-thesis-system.md  discovery-thesis-user.md  feature.md  frontend-feature.md  refactor.md  trade-alert-system.md  trade-alert-user.md
backend/: .env.bootstrap.example  .env.example  README.md  main.py  requirements.txt  ui.py
backend/api/: websocket.py
backend/data/: alerts_log.json  app_config.json  discovery_universe.json  engine.json  nasdaq_symbols.json  portfolio.json
backend/schedulers/: jobs.py
design/: ARGOS-setup-wizard.md  ARGOS.html  DESIGN-FRONTEND-GAPS.txt  aianalysis.jsx  alarms.jsx  app.jsx  charts.jsx  dashboard.jsx  icons.jsx  shell.jsx  stockdetail.jsx  styles.css
docs/: ADMIN-SETUP.md  CURSOR-PLUGINS.md  DISCOVERY-FRONTEND.md  FRONTEND-IMPLEMENTATION-PLAN.md  STABILIZATION-AUDIT.md  TARGET-PRICES.md  TELEGRAM-COMMANDS.md  TESTING.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: bump_version.sh  check-integrations.sh  fetch_nasdaq_symbols.py  init-admin.sh  release.sh  setup-plugins.sh  start.sh  test.sh
(+161 files in other folders)
