[project]
name = "argos"
version = "1.0.0"
description = "Kişisel portföy yönetim botu — FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
